tests/protocol_v3/snapshots/protocol_v3__versioning__dynamic_version.snap
---
source: tests/protocol_v3/versioning.rs
expression: one
---
{
  "status": 200,
  "headers": {
    "content-type": [
      "application/json"
    ],
    "vary": [
      "X-Inertia"
    ],
    "x-inertia": [
      "true"
    ]
  },
  "body": {
    "type": "json",
    "value": {
      "component": "Users/Show",
      "props": {
        "errors": {},
        "user": {
          "id": 123,
          "name": "Ada"
        }
      },
      "url": "/users/123",
      "version": "asset-1"
    }
  }
}
