tests/protocol_v3/snapshots/protocol_v3__versioning__matching_version_reaches_handler.snap
---
source: tests/protocol_v3/versioning.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": [
      "application/json"
    ],
    "vary": [
      "X-Inertia"
    ],
    "x-inertia": [
      "true"
    ]
  },
  "body": {
    "type": "json",
    "value": {
      "component": "Counter",
      "props": {
        "errors": {},
        "ok": true
      },
      "url": "/handler-counter",
      "version": "asset-version-v3"
    }
  }
}
