tests/protocol_v3/snapshots/protocol_v3__versioning__missing_version_conflict.snap
---
source: tests/protocol_v3/versioning.rs
expression: response
---
{
  "status": 409,
  "headers": {
    "vary": [
      "X-Inertia"
    ],
    "x-inertia-location": [
      "/handler-counter"
    ]
  },
  "body": {
    "type": "empty"
  }
}
