tests/protocol_v3/snapshots/protocol_v3__versioning__stale_asset_version.snap
---
source: tests/protocol_v3/versioning.rs
expression: response
---
{
  "status": 409,
  "headers": {
    "vary": [
      "X-Inertia"
    ],
    "x-inertia-location": [
      "/handler-counter?tab=active"
    ]
  },
  "body": {
    "type": "empty"
  }
}
